# waylib

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  README.md  README.zh_CN.md  flake.nix  renovate.json  waylib.pro
examples/: CMakeLists.txt  examples.pro
examples/animationclient/: CMakeLists.txt  Main.qml  main.cpp
examples/blur/: CMakeLists.txt  Main.qml  helper.h  main.cpp
examples/outputcopy/: CMakeLists.txt  PrimaryOutputDelegate.qml  helper.h  main.cpp
examples/outputviewport/: CMakeLists.txt  Main.qml  helper.cpp  helper.h  main.cpp
examples/surface-delegate/: CMakeLists.txt  Main.qml  main.cpp
examples/tinywl/: Border.qml  CMakeLists.txt  ClientWindow.qml  CloseAnimation.qml  GeometryAnimation.qml  InputPopupSurface.qml  LayerSurface.qml  Main.qml  MiniDock.qml  Output.qml  OutputDelegate.qml  OutputMenuBar.qml  PrimaryOutput.qml  QmlHelper.qml  StackToplevelHelper.qml  StackWorkspace.qml  SurfaceContent.qml  SurfaceDelegate.qml  SurfaceWrapper.qml  TaskBar.qml  TiledToplevelHelper.qml  TiledWorkspace.qml  TitleBar.qml  Window.qml  WindowDecoration.qml  WindowMenu.qml  WorkspaceSwitcher.qml  XdgStackWorkspace.qml  XdgSurface.qml  XdgTiledWorkspace.qml  helper.cpp  helper.h  layersurfacecontainer.cpp  main.cpp  output.cpp  output.h  qml.qrc  qmlengine.cpp  qmlengine.h  rootsurfacecontainer.cpp  (+14 more)
examples/tinywl-new/: CMakeLists.txt  CopyOutput.qml  Decoration.qml  GeometryAnimation.qml  OutputMenuBar.qml  PrimaryOutput.qml  RoundedClipEffect.qml  Shadow.qml  SurfaceContent.qml  TaskBar.qml  TaskSwitcher.qml  TitleBar.qml  WindowMenu.qml  WorkspaceProxy.qml  WorkspaceSwitcher.qml  helper.cpp  helper.h  layersurfacecontainer.cpp  layersurfacecontainer.h  main.cpp  output.cpp  output.h  qmlengine.cpp  qmlengine.h  rootsurfacecontainer.cpp  rootsurfacecontainer.h  surfacecontainer.cpp  surfacecontainer.h  surfaceproxy.cpp  surfaceproxy.h  surfacewrapper.cpp  surfacewrapper.h  wallpaperimage.cpp  wallpaperimage.h  wallpaperprovider.cpp  wallpaperprovider.h  workspace.cpp  workspace.h  workspacemodel.cpp  workspacemodel.h
src/server/: CMakeLists.txt  server.pro  wglobal.cpp  wglobal.h
src/server/kernel/: WBackend  WCursor  WEvent  WInputDevice  WLayerSurface  WOutput  WOutputLayout  WSeat  WServer  WSurface  WSurfaceLayout  WTexture  WXCursorManager  kernel.pri  wbackend.cpp  wbackend.h  wcursor.cpp  wcursor.h  wevent.cpp  wevent.h  wglobal.cpp  wglobal.h  winputdevice.cpp  winputdevice.h  wlayersurface.cpp  wlayersurface.h  woutput.cpp  woutput.h  woutputdamage.cpp  woutputdamage.h  woutputlayout.cpp  woutputlayout.h  woutputlayoutitem.cpp  wseat.cpp  wseat.h  wserver.cpp  wserver.h  wsocket.cpp  wsocket.h  wsurface.cpp  (+27 more)
src/server/kernel/private/: private.pri  wcursor_p.h  wglobal_p.h  woutputlayout_p.h  wserver_p.h  wsurface_p.h  wsurfacehandler_p.h  wsurfacelayout_p.h  wtoplevelsurface_p.h
src/server/pch/: pch.hxx
src/server/platformplugin/: qwlrootscreen.cpp  qwlrootscreen.h  qwlrootscursor.cpp  qwlrootscursor.h  qwlrootsintegration.cpp  qwlrootsintegration.h  qwlrootswindow.cpp  qwlrootswindow.h  types.cpp  types.h
src/server/protocols/: WCursorShapeManagerV1  WForeignToplevel  WInputMethodHelper  WInputPopupSurface  WLayerShell  WOutputManagerV1  WXWayland  WXWaylandSurface  WXdgDecorationManager  WXdgOutput  WXdgShell  WXdgSurface  text-input-unstable-v2.xml  wcursorshapemanagerv1.cpp  wcursorshapemanagerv1.h  wextforeigntoplevellistv1.cpp  wextforeigntoplevellistv1.h  wforeigntoplevelv1.cpp  wforeigntoplevelv1.h  winputmethodhelper.cpp  winputmethodhelper.h  winputpopupsurface.cpp  winputpopupsurface.h  wlayershell.cpp  wlayershell.h  wlayersurface.cpp  wlayersurface.h  woutputmanagerv1.cpp  woutputmanagerv1.h  wxdgdecorationmanager.cpp  wxdgdecorationmanager.h  wxdgoutput.cpp  wxdgoutput.h  wxdgpopupsurface.cpp  wxdgpopupsurface.h  wxdgshell.cpp  wxdgshell.h  wxdgsurface.cpp  wxdgsurface.h  wxdgtoplevelsurface.cpp  (+5 more)
src/server/protocols/private/: text-input-unstable-v2.xml  winputmethodv2.cpp  winputmethodv2_p.h  wtextinput_p.h  wtextinputv1.cpp  wtextinputv1_p.h  wtextinputv2.cpp  wtextinputv2_p.h  wtextinputv3.cpp  wtextinputv3_p.h  wvirtualkeyboardv1.cpp  wvirtualkeyboardv1_p.h  wxdgdecorationmanager_p.h
src/server/qtquick/: WQuickRenderControl  WSurfaceItem  WSurfaceManager  qtquick.pri  wbuffertextureprovider.h  weventjunkman.cpp  weventjunkman.h  winputmethodhelper.h  winputpopupsurfaceitem.cpp  winputpopupsurfaceitem.h  wlayersurfaceitem.cpp  wlayersurfaceitem.h  woutputhelper.cpp  woutputhelper.h  woutputitem.cpp  woutputitem.h  woutputlayer.cpp  woutputlayer.h  woutputlayoutitem.cpp  woutputlayoutitem.h  woutputpositioner.cpp  woutputpositioner.h  woutputrenderwindow.cpp  woutputrenderwindow.h  woutputviewport.cpp  woutputviewport.h  woutputwindow.cpp  woutputwindow.h  wqmlcreator.cpp  wqmlcreator.h  wqmldynamiccreator.cpp  wquickbackend.cpp  wquickbackend.h  wquickcursor.cpp  wquickcursor.h  wquickitemproxy.cpp  wquickitemproxy.h  wquickobserver.cpp  wquickobserver.h  wquickoutputlayout.cpp  (+31 more)
src/server/qtquick/private/: wbufferrenderer.cpp  wbufferrenderer_p.h  winputmethodcommon_p.h  winputmethodhelper.cpp  winputmethodhelper_p.h  woutputitem_p.h  woutputpositioner_p.h  woutputviewport_p.h  woutputwindowitem.cpp  woutputwindowitem_p.h  wqmlcomconent.cpp  wqmlcomconent_p.h  wqmlcreator_p.h  wqmldynamiccreator.cpp  wqmldynamiccreator_p.h  wqmlhelper.cpp  wqmlhelper_p.h  wquickbackend.cpp  wquickbackend_p.h  wquickcoordmapper.cpp  wquickcoordmapper_p.h  wquickcursorshape.cpp  wquickcursorshape_p.h  wquickforeigntoplevelmanagerv1.cpp  wquickforeigntoplevelmanagerv1_p.h  wquickfractionalscalemanagerv1.cpp  wquickfractionalscalemanagerv1_p.h  wquickgammacontrol.cpp  wquickgammacontrol_p.h  (+45 more)
src/server/utils/: WCursorImage  WSignalConnector  WThreadUtils  WWrapPointer  utils.pri  wcursorimage.cpp  wcursorimage.h  wimagebuffer.cpp  wimagebuffer.h  wsignalconnector.cpp  wsignalconnector.h  wthreadutils.cpp  wthreadutils.h  wtools.cpp  wtools.h  wwrappointer.h
tests/unit_tests/test_wwrappointer/: CMakeLists.txt  main.cpp  wrapobject.h
(+47 files in other folders)
